syntax = "proto3";

option csharp_namespace = "GMicroservices.User.Grpc";

package User;

service UserProtoService {
	rpc CheckExist (GetExistUserRequest) returns (GetExistUserResponse);
}


message GetExistUserRequest {
	int32 userId = 1;
	int32 userType = 2;
}

message GetExistUserResponse {
	bool isExist = 1;
}

